src-ken&y/objects/Company__c.object
<CustomObject>
    <customHelpPage>HelpCompany</customHelpPage>
    <description>Each Logistics or Financial entity will be represented by a single Company record.  Master data for the Company is recorded here and used throughout the System.</description>
    <fields>
        <fullName>A_Days__c</fullName>
        <description>The number of days between cycle counts for A parts</description>
        <inlineHelpText>The number of days between cycle counts for A parts.</inlineHelpText>
        <label>A Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounting_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Standard</label>
        <referenceTo>Accounting_Standard__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account for address</description>
        <label>Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aliases__c</fullName>
        <label>Aliases</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allow_Retro_Active_Standard_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field would determine if the retro active cost update is allowed for the company. This field would be maintained only by the Admin, not all users would have access to this field.</description>
        <label>Allow Retroactive Standard Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Plan_Pick__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Plan-Pick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_Days__c</fullName>
        <description>The number of days between cycle counts for B parts</description>
        <inlineHelpText>The number of days between cycle counts for B parts.</inlineHelpText>
        <label>B Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Days__c</fullName>
        <description>The number of days between cycle counts for C parts</description>
        <inlineHelpText>The number of days between cycle counts for C parts.</inlineHelpText>
        <label>C Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Company city</description>
        <formula>Address__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Currency__c</fullName>
        <label>Company Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier to specify this company for data integrations</description>
        <externalId>true</externalId>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>Company Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Consol_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidation Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Companies (Consolidation Currency)</relationshipLabel>
        <relationshipName>Consol_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consolidation_Currency__c</fullName>
        <label>Consolidation Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_Number__c</fullName>
        <description>IRS control number typically used for electronic filing [such as 1099-MISC].</description>
        <inlineHelpText>IRS control number typically used for electronic filing (such as 1099-MISC).</inlineHelpText>
        <label>DEPRECATED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Company Country</description>
        <formula>Address__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
    <fullName>Auto_Create_BTO_WOs__c</fullName>
    <label>Auto-Create Build to Order Work Orders</label>
    <defaultValue>false</defaultValue>
    <description>Default is unchecked. If checked, associates work orders while releasing the build to order sales order lines.</description>
    <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Companies (Credit Card Bank Account)</relationshipLabel>
        <relationshipName>Companies_For_Credit_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Amount_Tolerance__c</fullName>
        <description>the default total amount of delta between a Supplier Invoice line compared to its related PO line defined at the company level</description>
        <label>Default Amount Tolerance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Exchange_Rate_Type__c</fullName>
        <label>Default Exchange Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Purchasing_Deliver_To_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Default Purchasing Deliver To Facility</inlineHelpText>
        <label>Purchasing Deliver To Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Quantity_Tolerance_Over__c</fullName>
        <description>the default % that the QTY can be different (over) between SI line and PO line receipt QTY defined at the company level</description>
        <label>Default Quantity Tolerance Over %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Rollup_Basis__c</fullName>
        <description>Defines how the assembly cost rollup will function</description>
        <label>Rollup Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Linear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Sales_Order_Dimension_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This UOM will be defaulted to all newly created Sales Order: Dimension UOM field</description>
        <label>Default Sales Order Dimension UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Companies (Default Sales Order Dimension UOM)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Order_Ship_From_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Default Sales Order Ship From Facility</inlineHelpText>
        <label>Sales Order Ship From Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Companies (Default Sales Order Ship From Facility)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Order_Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be used as the default weight UOM for all Sales Orders in a company.</description>
        <label>Default Sales Order Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Transaction_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Transaction Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Companies (Default Transaction Currency)</relationshipLabel>
        <relationshipName>Default_Transaction_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Unit_Price_Tolerance_Over__c</fullName>
        <description>the default % that the unit price can be different (over) between SI line and PO line defined at the company level</description>
        <label>Default Unit Price Tolerance Over %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Work_Order_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <label>Default Work Order Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Companies (Default Work Order Complete to Faicility)</relationshipLabel>
        <relationshipName>Companies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Work_Order_WIP_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Default Work Order WIP Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Companies (Default Work Order WIP Facility)</relationshipLabel>
        <relationshipName>Companies4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deposit bank account will be carried out by default on Customer receipt page as per company selection</description>
        <label>Deposit Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Bank_Account__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Companies (Deposit Bank Account)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disbursement_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default bank account used to send payments to suppliers</description>
        <label>Disbursement Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select a bank account related to this company</errorMessage>
            <filterItems>
                <field>Bank_Account__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Release_Partial_Sales_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Release Partial Sales Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalize_Supplier_Invoices_w_Exceptions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, the system finalizes supplier invoices and credit memos so they can be accounted, even if there are exceptions.</description>
        <label>Finalize Supplier Invoices on Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Forwarder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Freight Forwarder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Rate_Feed__c</fullName>
        <label>Frequency of Rate Feed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRP_Backward_Horizon_in_Days__c</fullName>
        <description>The number of days in the past from today that MRP will search for demand and supply</description>
        <inlineHelpText>Specifies the number of days in the past that MRP looks to for supply and demand.</inlineHelpText>
        <label>MRP Backward Horizon in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Demand_Time_Fence_in_Days__c</fullName>
        <description>MRP uses forecasted demand outside of this time window and Sales Orders inside this time fence</description>
        <inlineHelpText>MRP uses forecast demand outside of this time fence and sales order demand inside the time fence.</inlineHelpText>
        <label>MRP Demand Time Fence in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Forward_Horizon_in_Days__c</fullName>
        <description>The number of days in the future from today that MRP will search for demand and supply</description>
        <inlineHelpText>Specifies the number of days in the future that MRP looks to for supply and demand.</inlineHelpText>
        <label>MRP Forward Horizon in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Planning_Time_Fence_in_Days__c</fullName>
        <description>The number of days in the future from today before MRP creates any planned make order</description>
        <inlineHelpText>MRP will not change existing planned orders within the specified period.</inlineHelpText>
        <label>MRP Planning Time Fence in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Calendar</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>Manufacturing calendar must have type Manufacturing</errorMessage>
            <filterItems>
                <field>Calendar__c.Type__c</field>
                <operation>equals</operation>
                <value>Manufacturing</value>
            </filterItems>
            <filterItems>
                <field>Calendar__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Control__c</fullName>
        <description>Name Control is used for filing with the IRS [typically 1099s].</description>
        <label>DEPRECATED</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>record parent to subsidiary relationships</description>
        <label>Parent Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Parent Companies</relationshipLabel>
        <relationshipName>Parent_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Calendar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Companies (Planning Calendar)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business hours used to plan the orders generated through MRP.</description>
        <label>Planning Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Populate_Acceptance_Date_On_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Populate Acceptance Date On Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiving_Calendar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Companies (Receiving Calendar)</relationshipLabel>
        <relationshipName>Companies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Companies (Receiving Calendat)</relationshipLabel>
        <relationshipName>Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revaluation_Frequency_of_Unrealized_FX__c</fullName>
        <label>Revaluation_Frequency of Unrealized FX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Control__c</fullName>
        <description>Defines which processes needs to track serials</description>
        <label>Serial Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At receipt and all processes</fullName>
                </value>
                <value>
                    <fullName>At shipment only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stat_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statutory Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Companies (Statutory Currency)</relationshipLabel>
        <relationshipName>Stat_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Company State</description>
        <formula>Address__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statutory_Currency__c</fullName>
        <label>Statutory Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Company Street</description>
        <formula>Address__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subs_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Companies (Subsidiary Currency)</relationshipLabel>
        <relationshipName>Subs_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Currency__c</fullName>
        <label>Subsidiary Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <description>TIN of the company [for payment] - shows up on 1099 electronic filing.</description>
        <label>TIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ultimate parent for all companies that are related to this company</description>
        <label>Top Parent Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Companies (Top Parent Company)</relationshipLabel>
        <relationshipName>Top_Parent_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unrealized_FX_Revaluation_Method__c</fullName>
        <label>Unrealized FX Revaluation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Facility_Costs_in_Assembly_Rollup__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Facility Costs in Assembly Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Item_Types_For_Costing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked to do cost rollup based on item types.</description>
        <inlineHelpText>This should be checked to do cost rollup based on item types.</inlineHelpText>
        <label>Use Item Types For Costing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Only_Level_Zero_QOH_as_Supply_in_MRP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use Only Level Zero QOH as Supply in MRP when checkbox is selected.</inlineHelpText>
        <label>Level Zero QOH as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Order_Forecast_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Order Forecast as Demand in MRP</description>
        <inlineHelpText>MRP ignores order forecasts as demand if the checkbox is not selected.</inlineHelpText>
        <label>Order Forecast as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Purchase_Orders_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Purchase Orders as Supply in MRP</description>
        <inlineHelpText>MRP ignores purchase orders as supply if the checkbox is not selected.</inlineHelpText>
        <label>Purchase Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Quantity_on_Hand_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Quantity on Hand as Supply in MRP</description>
        <inlineHelpText>Use Quantity on Hand as Supply in MRP: ignore Safety Stock and Negative Quantity on Hand if checkbox is not selected.</inlineHelpText>
        <label>Quantity on Hand as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Sales_Orders_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Sales Orders as Demand in MRP</description>
        <inlineHelpText>MRP ignores sales orders as demand if checkbox is not selected.</inlineHelpText>
        <label>Sales Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Transfer_Orders_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Transfer Orders as Demand in MRP</description>
        <inlineHelpText>Use Transfer Orders as Demand in MRP</inlineHelpText>
        <label>Transfer Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Transfer_Orders_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Transfer Orders as Supply in MRP</description>
        <inlineHelpText>Use Transfer Orders as Supply in MRP</inlineHelpText>
        <label>Transfer Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Warranty_Repairs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Repair Flow</description>
        <label>Use Warranty Repairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Work_Orders_as_Demand_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Work Orders as Demand in MRP</description>
        <inlineHelpText>MRP ignores work orders as demand if the checkbox is not selected.</inlineHelpText>
        <label>Work Orders as Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Work_Orders_as_Supply_in_MRP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use Work Orders as Supply in MRP</description>
        <inlineHelpText>MRP ignores work orders as supply if the checkbox is not selected.</inlineHelpText>
        <label>Work Orders as Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Company Zip Code</description>
        <formula>Address__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ABC_Days</fullName>
        <active>true</active>
        <errorConditionFormula>OR(A_Days__c &lt; 0, B_Days__c &lt;0, C_Days__c &lt;0)</errorConditionFormula>
        <errorMessage>A Days, B Days or C Days cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_Fields_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(Default_Transaction_Currency__c), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Default Transaction Currency is not populated for this company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QOH_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Use_Only_Level_Zero_QOH_as_Supply_in_MRP__c == true, Use_Quantity_on_Hand_as_Supply_in_MRP__c == true)</errorConditionFormula>
        <errorDisplayField>Use_Only_Level_Zero_QOH_as_Supply_in_MRP__c</errorDisplayField>
        <errorMessage>You cannot check both Use Quantity on Hand as Supply in MRP or Use Only Level Zero QOH as Supply in MRP</errorMessage>
    </validationRules>
</CustomObject>